# emergency-response-system

./: .gitignore  CLAUDE.md  README.md
docs/: 00.example-ai-analysis.html  02.application_outputs.html  03.How Final Scores Are Calculated.md  04.Database Entries Retrieved Per Iteration.md  05.When AI Agent Decided to Stop Searching.md  06.Multi-provider Support.md  07.Multi-Agent Analysis.md  08.scenario-improvement-options.md  09.enhanced_scenarios_outputs.html  emergency_accommodation_flowchart.md  scenario1-enhanced-llm-example.md  scenario2-enhanced-llm-example.md  scenario3-enhanced-llm-example.md
emergency_accommodation/: .env.example  README.md  __init__.py  ai_agent.py  cli_display.py  database.py  main.py  models.py  pyproject.toml
emergency_accommodation/config/: __init__.py  loader.py  search_parameters.yaml
emergency_accommodation/config/prompts/: base_prompt.txt  scenario1-enhanced.txt  scenario1.txt  scenario2-enhanced.txt  scenario2.txt  scenario3-enhanced.txt  scenario3.txt
emergency_accommodation/docs/: CLI_TROUBLESHOOTING.md
emergency_accommodation/tests/: test_ai_agent.py  test_cli_display.py  test_config_loader.py  test_database.py  test_main.py  test_models.py
emergency_accommodation/tests/integration/: test_ai_agent_live.py  test_cli_end_to_end.py  test_database_live.py
postgres-scenarios/: .env.example  README.md  docker-compose.yml
postgres-scenarios/certs/: server.crt  server.key
postgres-scenarios/docs/: SCENARIOS.md  SETUP.md  TROUBLESHOOTING.md
specs/FEAT-001-postgresql-docker-scenarios/: design.md  requirements.md  tasks.md
(+40 files in other folders)
