[project]
name = "emergency-accommodation"
version = "0.1.0"
description = "AI-driven emergency accommodation system for supply chain disruptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "openai>=1.109.1",
    "openai-agents>=0.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "types-pyyaml>=6.0.12.20250915",
]
